[gd_scene load_steps=8 format=3 uid="uid://d4mqy83hs2suq"]

[ext_resource type="Texture2D" uid="uid://c6nyjd1g6i862" path="res://assets/BorderV.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bv0ydebmx7yko" path="res://assets/Character.png" id="2"]
[ext_resource type="Texture2D" uid="uid://omrq0grdix5u" path="res://assets/BorderH.png" id="3"]
[ext_resource type="Script" path="res://Scenes/ComboTimerUI/ComboTimerUI.gd" id="4"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -9.6, -9.6047, 0, 0, 0, 0, -9.6, 9.6047, 0, 0, 0, 0, 9.6, 9.6047, 0, 0, 0, 0, 9.6, -9.6047, 0, 0, 0, 0, -9.6, -9.6047)
}
point_count = 5

[sub_resource type="Gradient" id="2"]

[sub_resource type="Curve" id="3"]
_data = [Vector2(0.0284091, 0.918513), 0.0, 0.0, 0, 0, Vector2(0.920455, 0.0851798), 0.0, 0.0, 0, 0]
point_count = 2

[node name="ComboTimerUI" type="Node2D"]
script = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(20, 20)
texture = ExtResource("2")

[node name="Control" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -10.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureProgressLeft" type="TextureProgressBar" parent="Sprite2D/Control"]
layout_mode = 0
anchor_bottom = 1.0
offset_right = 1.0
min_value = 300.0
max_value = 400.0
value = 300.0
fill_mode = 3
texture_under = ExtResource("3")
texture_progress = ExtResource("3")
tint_under = Color(1, 1, 1, 0)

[node name="TextureProgressBottom" type="TextureProgressBar" parent="Sprite2D/Control"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
min_value = 200.0
max_value = 300.0
value = 200.0
fill_mode = 1
texture_under = ExtResource("1")
texture_progress = ExtResource("1")
tint_under = Color(1, 1, 1, 0)

[node name="TextureProgressRight" type="TextureProgressBar" parent="Sprite2D/Control"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
min_value = 100.0
max_value = 200.0
value = 100.0
fill_mode = 2
texture_under = ExtResource("3")
texture_progress = ExtResource("3")
tint_under = Color(1, 1, 1, 0)

[node name="TextureProgressTop" type="TextureProgressBar" parent="Sprite2D/Control"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 1.0
texture_under = ExtResource("1")
texture_progress = ExtResource("1")
tint_under = Color(1, 1, 1, 0)

[node name="Path2D" type="Path2D" parent="Sprite2D"]
scale = Vector2(1, 0.999511)
curve = SubResource("1")

[node name="PathFollow2D" type="PathFollow2D" parent="Sprite2D/Path2D"]
position = Vector2(-9.6, -9.6047)
rotation = 1.5708

[node name="SecondLayer" type="CPUParticles2D" parent="Sprite2D/Path2D/PathFollow2D"]
process_mode = 3
position = Vector2(0, 9.53674e-07)
amount = 32
preprocess = 1.0
direction = Vector2(4, 6)
spread = 180.0
gravity = Vector2(0, 0)
color_ramp = SubResource("2")

[node name="FirstLayer" type="CPUParticles2D" parent="Sprite2D/Path2D/PathFollow2D"]
process_mode = 3
amount = 32
preprocess = 1.0
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_min = 10.0
scale_amount_max = 12.0
scale_amount_curve = SubResource("3")
